cmake_minimum_required(VERSION 3.10)
project(ProjetNoyaux)

set(CMAKE_CXX_STANDARD 11)

include_directories(../nachos)

add_definitions(-DETUDIANTS_TP)

add_executable(nachos
        drivers/drvACIA.cc
        drivers/drvACIA.h
        drivers/drvConsole.cc
        drivers/drvConsole.h
        drivers/drvDisk.cc
        drivers/drvDisk.h
        drivers/Makefile
        filesys/directory.cc
        filesys/directory.h
        filesys/filehdr.cc
        filesys/filehdr.h
        filesys/filesys.cc
        filesys/filesys.h
        filesys/fsmisc.cc
        filesys/Makefile
        filesys/oftable.cc
        filesys/oftable.h
        filesys/openfile.cc
        filesys/openfile.h
        kernel/addrspace.cc
        kernel/addrspace.h
        kernel/copyright.h
        kernel/elf32.h
        kernel/exception.cc
        kernel/main.cc
        kernel/Makefile
        kernel/msgerror.cc
        kernel/msgerror.h
        kernel/process.cc
        kernel/process.h
        kernel/scheduler.cc
        kernel/scheduler.h
        kernel/synch.cc
        kernel/synch.h
        kernel/system.cc
        kernel/system.h
        kernel/thread.cc
        kernel/thread.h
        machine/ACIA.cc
        machine/ACIA.h
        machine/ACIA_sysdep.cc
        machine/ACIA_sysdep.h
        machine/console.cc
        machine/console.h
        machine/disk.cc
        machine/disk.h
        machine/interrupt.cc
        machine/interrupt.h
        machine/machine.cc
        machine/machine.h
        machine/Makefile
        machine/mipssim.cc
        machine/mipssim.h
        machine/mmu.cc
        machine/mmu.h
        machine/sysdep.cc
        machine/sysdep.h
        machine/timer.cc
        machine/timer.h
        machine/translationtable.cc
        machine/translationtable.h
        test/ConditionTest.c
        test/halt.c
        test/hello.c
        test/LockTest.c
        test/Makefile
        test/matmult.c
        test/nachos.cfg
        test/SemaphoreProdConso.c
        test/SemaphoreWait.c
        test/shell.c
        test/sort.c
        test/TestCreaDestr.c
        test/TtyReceiveTest.c
        test/TtySendTest.c
        userlib/ldscript.lds
        userlib/libnachos.c
        userlib/libnachos.h
        userlib/Makefile
        userlib/sys.s
        userlib/syscall.h
        utility/bitmap.cc
        utility/bitmap.h
        utility/config.cc
        utility/config.h
        utility/list.h
        utility/Makefile
        utility/objid.h
        utility/stats.cc
        utility/stats.h
        utility/utility.cc
        utility/utility.h
        vm/Makefile
        vm/pagefaultmanager.cc
        vm/pagefaultmanager.h
        vm/physMem.cc
        vm/physMem.h
        vm/swapManager.cc
        vm/swapManager.h
        doxygen.cfg
        Makefile
        Makefile.config
        Makefile.kernel
        Makefile.user
        README)